Configured for running with binder

--- a/Lab2.ipynb
+++ b/Lab2.ipynb
@@ -12,22 +12,21 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    ""
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      ">dm3gene_dna range=contig1:1-11000 5'pad=0 3'pad=0 strand=+ repeatMasking=none\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# df = pd.read_csv(\"bio/DNA.txt\", index_col=False, header=0)\n",
     "seq = \"\"\n",
-    "with open(\"DNA.txt\") as file:\n",
+    "with open(\"data/DNA.txt\") as file:\n",
     "    for line in file:\n",
     "        if line[0] is '>':\n",
     "            print(line)\n",
@@ -115,8 +114,7 @@
     "            print(\"window: \", i, i + window_size, \"\\t the gc content is: \", gc)\n",
     "        rolling_avg.append(gc)\n",
     "        window.append((i, i+window_size))\n",
-    "    return rolling_avg, window\n",
-    "    "
+    "    return rolling_avg, window"
    ]
   },
   {
@@ -126,7 +124,7 @@
    "outputs": [],
    "source": [
     "# rolling_avg0, window0 = get_averages()\n",
-    "# rolling_avg1, window1 = get_averages(offset=int(s/66.6)) # approximately 1.5%\n"
+    "# rolling_avg1, window1 = get_averages(offset=int(s/66.6)) # approximately 1.5%"
    ]
   },
   {
@@ -156,7 +154,7 @@
     "plt.ylabel('Percentage')\n",
     "plt.xlabel('Window Number')\n",
     "plt.title('GC Percentage')\n",
-    "plt.show()\n"
+    "plt.show()"
    ]
   },
   {
@@ -164,7 +162,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    ""
+   ]
   }
  ],
  "metadata": {
@@ -176,16 +176,16 @@
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 3
+    "version": 3.0
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.3"
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 0
 }
